Jezyk/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from Jezyk/Par.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pVar -> Var                                 (0)
	%start_pArg -> Arg                                 (1)
	%start_pStmt -> Stmt                               (2)
	%start_pStmt1 -> Stmt1                             (3)
	%start_pStmt2 -> Stmt2                             (4)
	%start_pExpr6 -> Expr6                             (5)
	%start_pExpr3 -> Expr3                             (6)
	%start_pExpr4 -> Expr4                             (7)
	%start_pExpr5 -> Expr5                             (8)
	%start_pExpr2 -> Expr2                             (9)
	%start_pExpr1 -> Expr1                             (10)
	%start_pExpr -> Expr                               (11)
	%start_pType -> Type                               (12)
	%start_pCType -> CType                             (13)
	%start_pADecl -> ADecl                             (14)
	%start_pFDecl -> FDecl                             (15)
	%start_pDecl1 -> Decl1                             (16)
	%start_pDecl -> Decl                               (17)
	Ident -> L_Ident                                   (18)
	Integer -> L_integ                                 (19)
	Var -> Ident                                       (20)
	Var -> Ident 'at' Expr                             (21)
	Arg -> Ident                                       (22)
	Arg -> Ident ',' Arg                               (23)
	Stmt -> 'call' Ident                               (24)
	Stmt -> 'call' Ident 'with' Arg                    (25)
	Stmt -> 'print' Ident                              (26)
	Stmt -> 'begin' Decl ';' Stmt 'end'                (27)
	Stmt -> 'try' Stmt 'catch' Stmt 'end'              (28)
	Stmt -> Stmt1 ';' Stmt                             (29)
	Stmt -> Stmt1                                      (30)
	Stmt1 -> 'set' Var 'to' Expr                       (31)
	Stmt1 -> 'set' Var 'to' 'call' Ident               (32)
	Stmt1 -> 'set' Var 'to' 'call' Ident 'with' Arg    (33)
	Stmt1 -> 'del' Expr 'from' Ident                   (34)
	Stmt1 -> Stmt2                                     (35)
	Stmt2 -> 'if' Expr 'then' Stmt 'else' Stmt 'end'   (36)
	Stmt2 -> 'if' Expr 'then' Stmt 'end'               (37)
	Stmt2 -> 'while' Expr 'do' Stmt1                   (38)
	Stmt2 -> 'for' Ident 'from' Expr 'to' Expr 'do' Stmt 'end'   (39)
	Stmt2 -> 'for' Ident 'in' 'keys' Ident 'do' Stmt 'end'   (40)
	Stmt2 -> 'for' Ident 'in' 'values' Ident 'do' Stmt 'end'   (41)
	Stmt2 -> 'for' Ident ',' Ident 'in' Ident 'do' Stmt 'end'   (42)
	Expr6 -> 'true'                                    (43)
	Expr6 -> 'false'                                   (44)
	Expr6 -> Integer                                   (45)
	Expr6 -> Ident                                     (46)
	Expr6 -> 'check' Expr 'in' Ident                   (47)
	Expr6 -> '(' Expr ')'                              (48)
	Expr3 -> Expr3 '+' Expr4                           (49)
	Expr3 -> Expr3 '-' Expr4                           (50)
	Expr3 -> Expr4                                     (51)
	Expr4 -> Expr4 '*' Expr5                           (52)
	Expr4 -> Expr4 '/' Expr5                           (53)
	Expr4 -> Expr5                                     (54)
	Expr5 -> '-' Expr5                                 (55)
	Expr5 -> '!' Expr5                                 (56)
	Expr5 -> Expr6                                     (57)
	Expr2 -> Expr2 '=' Expr3                           (58)
	Expr2 -> Expr2 '<' Expr3                           (59)
	Expr2 -> Expr2 '>' Expr3                           (60)
	Expr2 -> Expr2 '<=' Expr3                          (61)
	Expr2 -> Expr2 '>=' Expr3                          (62)
	Expr2 -> Expr2 '!=' Expr3                          (63)
	Expr2 -> Expr3                                     (64)
	Expr1 -> Expr1 '&' Expr2                           (65)
	Expr1 -> Expr1 '|' Expr2                           (66)
	Expr1 -> Expr2                                     (67)
	Expr -> Expr1 '?' Expr ':' Expr                    (68)
	Expr -> Expr1                                      (69)
	Type -> 'bool'                                     (70)
	Type -> 'int'                                      (71)
	CType -> 'array' 'of' Integer Type                 (72)
	CType -> 'dict' 'of' Type                          (73)
	ADecl -> Ident 'of' Type                           (74)
	ADecl -> Ident 'of' Type ',' ADecl                 (75)
	FDecl -> 'fun' 'to' 'void'                         (76)
	FDecl -> 'fun' 'to' Ident 'of' Type                (77)
	FDecl -> 'fun' 'from' ADecl 'to' 'void'            (78)
	FDecl -> 'fun' 'from' ADecl 'to' Ident 'of' Type   (79)
	Decl1 -> 'let' Ident 'be' Type                     (80)
	Decl1 -> 'let' Ident 'be' CType                    (81)
	Decl1 -> 'let' Ident 'be' FDecl 'do' Stmt 'end'    (82)
	Decl -> Decl ';' Decl1                             (83)
	Decl -> Decl1                                      (84)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'&'            { PT _ (TS _ 3) }
	'('            { PT _ (TS _ 4) }
	')'            { PT _ (TS _ 5) }
	'*'            { PT _ (TS _ 6) }
	'+'            { PT _ (TS _ 7) }
	','            { PT _ (TS _ 8) }
	'-'            { PT _ (TS _ 9) }
	'/'            { PT _ (TS _ 10) }
	':'            { PT _ (TS _ 11) }
	';'            { PT _ (TS _ 12) }
	'<'            { PT _ (TS _ 13) }
	'<='           { PT _ (TS _ 14) }
	'='            { PT _ (TS _ 15) }
	'>'            { PT _ (TS _ 16) }
	'>='           { PT _ (TS _ 17) }
	'?'            { PT _ (TS _ 18) }
	'array'        { PT _ (TS _ 19) }
	'at'           { PT _ (TS _ 20) }
	'be'           { PT _ (TS _ 21) }
	'begin'        { PT _ (TS _ 22) }
	'bool'         { PT _ (TS _ 23) }
	'call'         { PT _ (TS _ 24) }
	'catch'        { PT _ (TS _ 25) }
	'check'        { PT _ (TS _ 26) }
	'del'          { PT _ (TS _ 27) }
	'dict'         { PT _ (TS _ 28) }
	'do'           { PT _ (TS _ 29) }
	'else'         { PT _ (TS _ 30) }
	'end'          { PT _ (TS _ 31) }
	'false'        { PT _ (TS _ 32) }
	'for'          { PT _ (TS _ 33) }
	'from'         { PT _ (TS _ 34) }
	'fun'          { PT _ (TS _ 35) }
	'if'           { PT _ (TS _ 36) }
	'in'           { PT _ (TS _ 37) }
	'int'          { PT _ (TS _ 38) }
	'keys'         { PT _ (TS _ 39) }
	'let'          { PT _ (TS _ 40) }
	'of'           { PT _ (TS _ 41) }
	'print'        { PT _ (TS _ 42) }
	'set'          { PT _ (TS _ 43) }
	'then'         { PT _ (TS _ 44) }
	'to'           { PT _ (TS _ 45) }
	'true'         { PT _ (TS _ 46) }
	'try'          { PT _ (TS _ 47) }
	'values'       { PT _ (TS _ 48) }
	'void'         { PT _ (TS _ 49) }
	'while'        { PT _ (TS _ 50) }
	'with'         { PT _ (TS _ 51) }
	'|'            { PT _ (TS _ 52) }
	L_Ident        { PT _ (TV $$) }
	L_integ        { PT _ (TI $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pVar     rule  0
	%start_pArg     rule  1
	%start_pStmt    rule  2
	%start_pStmt1   rule  3
	%start_pStmt2   rule  4
	%start_pExpr6   rule  5
	%start_pExpr3   rule  6
	%start_pExpr4   rule  7
	%start_pExpr5   rule  8
	%start_pExpr2   rule  9
	%start_pExpr1   rule  10
	%start_pExpr    rule  11
	%start_pType    rule  12
	%start_pCType   rule  13
	%start_pADecl   rule  14
	%start_pFDecl   rule  15
	%start_pDecl1   rule  16
	%start_pDecl    rule  17
	Ident           rule  18
	Integer         rule  19
	Var             rules 20, 21
	Arg             rules 22, 23
	Stmt            rules 24, 25, 26, 27, 28, 29, 30
	Stmt1           rules 31, 32, 33, 34, 35
	Stmt2           rules 36, 37, 38, 39, 40, 41, 42
	Expr6           rules 43, 44, 45, 46, 47, 48
	Expr3           rules 49, 50, 51
	Expr4           rules 52, 53, 54
	Expr5           rules 55, 56, 57
	Expr2           rules 58, 59, 60, 61, 62, 63, 64
	Expr1           rules 65, 66, 67
	Expr            rules 68, 69
	Type            rules 70, 71
	CType           rules 72, 73
	ADecl           rules 74, 75
	FDecl           rules 76, 77, 78, 79
	Decl1           rules 80, 81, 82
	Decl            rules 83, 84

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pVar -> . Var                                (rule 0)

	L_Ident        shift, and enter state 19

	Ident          goto state 72
	Var            goto state 73

State 1

	%start_pArg -> . Arg                                (rule 1)

	L_Ident        shift, and enter state 19

	Ident          goto state 70
	Arg            goto state 71

State 2

	%start_pStmt -> . Stmt                              (rule 2)

	'begin'        shift, and enter state 66
	'call'         shift, and enter state 67
	'del'          shift, and enter state 62
	'for'          shift, and enter state 57
	'if'           shift, and enter state 58
	'print'        shift, and enter state 68
	'set'          shift, and enter state 63
	'try'          shift, and enter state 69
	'while'        shift, and enter state 59

	Stmt           goto state 64
	Stmt1          goto state 65
	Stmt2          goto state 61

State 3

	%start_pStmt1 -> . Stmt1                            (rule 3)

	'del'          shift, and enter state 62
	'for'          shift, and enter state 57
	'if'           shift, and enter state 58
	'set'          shift, and enter state 63
	'while'        shift, and enter state 59

	Stmt1          goto state 60
	Stmt2          goto state 61

State 4

	%start_pStmt2 -> . Stmt2                            (rule 4)

	'for'          shift, and enter state 57
	'if'           shift, and enter state 58
	'while'        shift, and enter state 59

	Stmt2          goto state 56

State 5

	%start_pExpr6 -> . Expr6                            (rule 5)

	'('            shift, and enter state 44
	'check'        shift, and enter state 46
	'false'        shift, and enter state 47
	'true'         shift, and enter state 48
	L_Ident        shift, and enter state 19
	L_integ        shift, and enter state 49

	Ident          goto state 34
	Integer        goto state 35
	Expr6          goto state 55

State 6

	%start_pExpr3 -> . Expr3                            (rule 6)

	'!'            shift, and enter state 43
	'('            shift, and enter state 44
	'-'            shift, and enter state 45
	'check'        shift, and enter state 46
	'false'        shift, and enter state 47
	'true'         shift, and enter state 48
	L_Ident        shift, and enter state 19
	L_integ        shift, and enter state 49

	Ident          goto state 34
	Integer        goto state 35
	Expr6          goto state 36
	Expr3          goto state 54
	Expr4          goto state 38
	Expr5          goto state 39

State 7

	%start_pExpr4 -> . Expr4                            (rule 7)

	'!'            shift, and enter state 43
	'('            shift, and enter state 44
	'-'            shift, and enter state 45
	'check'        shift, and enter state 46
	'false'        shift, and enter state 47
	'true'         shift, and enter state 48
	L_Ident        shift, and enter state 19
	L_integ        shift, and enter state 49

	Ident          goto state 34
	Integer        goto state 35
	Expr6          goto state 36
	Expr4          goto state 53
	Expr5          goto state 39

State 8

	%start_pExpr5 -> . Expr5                            (rule 8)

	'!'            shift, and enter state 43
	'('            shift, and enter state 44
	'-'            shift, and enter state 45
	'check'        shift, and enter state 46
	'false'        shift, and enter state 47
	'true'         shift, and enter state 48
	L_Ident        shift, and enter state 19
	L_integ        shift, and enter state 49

	Ident          goto state 34
	Integer        goto state 35
	Expr6          goto state 36
	Expr5          goto state 52

State 9

	%start_pExpr2 -> . Expr2                            (rule 9)

	'!'            shift, and enter state 43
	'('            shift, and enter state 44
	'-'            shift, and enter state 45
	'check'        shift, and enter state 46
	'false'        shift, and enter state 47
	'true'         shift, and enter state 48
	L_Ident        shift, and enter state 19
	L_integ        shift, and enter state 49

	Ident          goto state 34
	Integer        goto state 35
	Expr6          goto state 36
	Expr3          goto state 37
	Expr4          goto state 38
	Expr5          goto state 39
	Expr2          goto state 51

State 10

	%start_pExpr1 -> . Expr1                            (rule 10)

	'!'            shift, and enter state 43
	'('            shift, and enter state 44
	'-'            shift, and enter state 45
	'check'        shift, and enter state 46
	'false'        shift, and enter state 47
	'true'         shift, and enter state 48
	L_Ident        shift, and enter state 19
	L_integ        shift, and enter state 49

	Ident          goto state 34
	Integer        goto state 35
	Expr6          goto state 36
	Expr3          goto state 37
	Expr4          goto state 38
	Expr5          goto state 39
	Expr2          goto state 40
	Expr1          goto state 50

State 11

	%start_pExpr -> . Expr                              (rule 11)

	'!'            shift, and enter state 43
	'('            shift, and enter state 44
	'-'            shift, and enter state 45
	'check'        shift, and enter state 46
	'false'        shift, and enter state 47
	'true'         shift, and enter state 48
	L_Ident        shift, and enter state 19
	L_integ        shift, and enter state 49

	Ident          goto state 34
	Integer        goto state 35
	Expr6          goto state 36
	Expr3          goto state 37
	Expr4          goto state 38
	Expr5          goto state 39
	Expr2          goto state 40
	Expr1          goto state 41
	Expr           goto state 42

State 12

	%start_pType -> . Type                              (rule 12)

	'bool'         shift, and enter state 32
	'int'          shift, and enter state 33

	Type           goto state 31

State 13

	%start_pCType -> . CType                            (rule 13)

	'array'        shift, and enter state 29
	'dict'         shift, and enter state 30

	CType          goto state 28

State 14

	%start_pADecl -> . ADecl                            (rule 14)

	L_Ident        shift, and enter state 19

	Ident          goto state 26
	ADecl          goto state 27

State 15

	%start_pFDecl -> . FDecl                            (rule 15)

	'fun'          shift, and enter state 25

	FDecl          goto state 24

State 16

	%start_pDecl1 -> . Decl1                            (rule 16)

	'let'          shift, and enter state 22

	Decl1          goto state 23

State 17

	%start_pDecl -> . Decl                              (rule 17)

	'let'          shift, and enter state 22

	Decl1          goto state 20
	Decl           goto state 21

State 18

	Ident -> . L_Ident                                  (rule 18)

	L_Ident        shift, and enter state 19


State 19

	Ident -> L_Ident .                                  (rule 18)

	'!='           reduce using rule 18
	'&'            reduce using rule 18
	')'            reduce using rule 18
	'*'            reduce using rule 18
	'+'            reduce using rule 18
	','            reduce using rule 18
	'-'            reduce using rule 18
	'/'            reduce using rule 18
	':'            reduce using rule 18
	';'            reduce using rule 18
	'<'            reduce using rule 18
	'<='           reduce using rule 18
	'='            reduce using rule 18
	'>'            reduce using rule 18
	'>='           reduce using rule 18
	'?'            reduce using rule 18
	'at'           reduce using rule 18
	'be'           reduce using rule 18
	'catch'        reduce using rule 18
	'do'           reduce using rule 18
	'else'         reduce using rule 18
	'end'          reduce using rule 18
	'from'         reduce using rule 18
	'in'           reduce using rule 18
	'of'           reduce using rule 18
	'then'         reduce using rule 18
	'to'           reduce using rule 18
	'with'         reduce using rule 18
	'|'            reduce using rule 18
	%eof           reduce using rule 18


State 20

	Decl -> Decl1 .                                     (rule 84)

	';'            reduce using rule 84
	%eof           reduce using rule 84


State 21

	%start_pDecl -> Decl .                              (rule 17)
	Decl -> Decl . ';' Decl1                            (rule 83)

	';'            shift, and enter state 109
	%eof           accept


State 22

	Decl1 -> 'let' . Ident 'be' Type                    (rule 80)
	Decl1 -> 'let' . Ident 'be' CType                   (rule 81)
	Decl1 -> 'let' . Ident 'be' FDecl 'do' Stmt 'end'    (rule 82)

	L_Ident        shift, and enter state 19

	Ident          goto state 108

State 23

	%start_pDecl1 -> Decl1 .                            (rule 16)

	%eof           accept


State 24

	%start_pFDecl -> FDecl .                            (rule 15)

	%eof           accept


State 25

	FDecl -> 'fun' . 'to' 'void'                        (rule 76)
	FDecl -> 'fun' . 'to' Ident 'of' Type               (rule 77)
	FDecl -> 'fun' . 'from' ADecl 'to' 'void'           (rule 78)
	FDecl -> 'fun' . 'from' ADecl 'to' Ident 'of' Type    (rule 79)

	'from'         shift, and enter state 106
	'to'           shift, and enter state 107


State 26

	ADecl -> Ident . 'of' Type                          (rule 74)
	ADecl -> Ident . 'of' Type ',' ADecl                (rule 75)

	'of'           shift, and enter state 105


State 27

	%start_pADecl -> ADecl .                            (rule 14)

	%eof           accept


State 28

	%start_pCType -> CType .                            (rule 13)

	%eof           accept


State 29

	CType -> 'array' . 'of' Integer Type                (rule 72)

	'of'           shift, and enter state 104


State 30

	CType -> 'dict' . 'of' Type                         (rule 73)

	'of'           shift, and enter state 103


State 31

	%start_pType -> Type .                              (rule 12)

	%eof           accept


State 32

	Type -> 'bool' .                                    (rule 70)

	','            reduce using rule 70
	';'            reduce using rule 70
	'do'           reduce using rule 70
	'to'           reduce using rule 70
	%eof           reduce using rule 70


State 33

	Type -> 'int' .                                     (rule 71)

	','            reduce using rule 71
	';'            reduce using rule 71
	'do'           reduce using rule 71
	'to'           reduce using rule 71
	%eof           reduce using rule 71


State 34

	Expr6 -> Ident .                                    (rule 46)

	'!='           reduce using rule 46
	'&'            reduce using rule 46
	')'            reduce using rule 46
	'*'            reduce using rule 46
	'+'            reduce using rule 46
	'-'            reduce using rule 46
	'/'            reduce using rule 46
	':'            reduce using rule 46
	';'            reduce using rule 46
	'<'            reduce using rule 46
	'<='           reduce using rule 46
	'='            reduce using rule 46
	'>'            reduce using rule 46
	'>='           reduce using rule 46
	'?'            reduce using rule 46
	'catch'        reduce using rule 46
	'do'           reduce using rule 46
	'else'         reduce using rule 46
	'end'          reduce using rule 46
	'from'         reduce using rule 46
	'in'           reduce using rule 46
	'then'         reduce using rule 46
	'to'           reduce using rule 46
	'|'            reduce using rule 46
	%eof           reduce using rule 46


State 35

	Expr6 -> Integer .                                  (rule 45)

	'!='           reduce using rule 45
	'&'            reduce using rule 45
	')'            reduce using rule 45
	'*'            reduce using rule 45
	'+'            reduce using rule 45
	'-'            reduce using rule 45
	'/'            reduce using rule 45
	':'            reduce using rule 45
	';'            reduce using rule 45
	'<'            reduce using rule 45
	'<='           reduce using rule 45
	'='            reduce using rule 45
	'>'            reduce using rule 45
	'>='           reduce using rule 45
	'?'            reduce using rule 45
	'catch'        reduce using rule 45
	'do'           reduce using rule 45
	'else'         reduce using rule 45
	'end'          reduce using rule 45
	'from'         reduce using rule 45
	'in'           reduce using rule 45
	'then'         reduce using rule 45
	'to'           reduce using rule 45
	'|'            reduce using rule 45
	%eof           reduce using rule 45


State 36

	Expr5 -> Expr6 .                                    (rule 57)

	'!='           reduce using rule 57
	'&'            reduce using rule 57
	')'            reduce using rule 57
	'*'            reduce using rule 57
	'+'            reduce using rule 57
	'-'            reduce using rule 57
	'/'            reduce using rule 57
	':'            reduce using rule 57
	';'            reduce using rule 57
	'<'            reduce using rule 57
	'<='           reduce using rule 57
	'='            reduce using rule 57
	'>'            reduce using rule 57
	'>='           reduce using rule 57
	'?'            reduce using rule 57
	'catch'        reduce using rule 57
	'do'           reduce using rule 57
	'else'         reduce using rule 57
	'end'          reduce using rule 57
	'from'         reduce using rule 57
	'in'           reduce using rule 57
	'then'         reduce using rule 57
	'to'           reduce using rule 57
	'|'            reduce using rule 57
	%eof           reduce using rule 57


State 37

	Expr3 -> Expr3 . '+' Expr4                          (rule 49)
	Expr3 -> Expr3 . '-' Expr4                          (rule 50)
	Expr2 -> Expr3 .                                    (rule 64)

	'!='           reduce using rule 64
	'&'            reduce using rule 64
	')'            reduce using rule 64
	'+'            shift, and enter state 86
	'-'            shift, and enter state 87
	':'            reduce using rule 64
	';'            reduce using rule 64
	'<'            reduce using rule 64
	'<='           reduce using rule 64
	'='            reduce using rule 64
	'>'            reduce using rule 64
	'>='           reduce using rule 64
	'?'            reduce using rule 64
	'catch'        reduce using rule 64
	'do'           reduce using rule 64
	'else'         reduce using rule 64
	'end'          reduce using rule 64
	'from'         reduce using rule 64
	'in'           reduce using rule 64
	'then'         reduce using rule 64
	'to'           reduce using rule 64
	'|'            reduce using rule 64
	%eof           reduce using rule 64


State 38

	Expr3 -> Expr4 .                                    (rule 51)
	Expr4 -> Expr4 . '*' Expr5                          (rule 52)
	Expr4 -> Expr4 . '/' Expr5                          (rule 53)

	'!='           reduce using rule 51
	'&'            reduce using rule 51
	')'            reduce using rule 51
	'*'            shift, and enter state 88
	'+'            reduce using rule 51
	'-'            reduce using rule 51
	'/'            shift, and enter state 89
	':'            reduce using rule 51
	';'            reduce using rule 51
	'<'            reduce using rule 51
	'<='           reduce using rule 51
	'='            reduce using rule 51
	'>'            reduce using rule 51
	'>='           reduce using rule 51
	'?'            reduce using rule 51
	'catch'        reduce using rule 51
	'do'           reduce using rule 51
	'else'         reduce using rule 51
	'end'          reduce using rule 51
	'from'         reduce using rule 51
	'in'           reduce using rule 51
	'then'         reduce using rule 51
	'to'           reduce using rule 51
	'|'            reduce using rule 51
	%eof           reduce using rule 51


State 39

	Expr4 -> Expr5 .                                    (rule 54)

	'!='           reduce using rule 54
	'&'            reduce using rule 54
	')'            reduce using rule 54
	'*'            reduce using rule 54
	'+'            reduce using rule 54
	'-'            reduce using rule 54
	'/'            reduce using rule 54
	':'            reduce using rule 54
	';'            reduce using rule 54
	'<'            reduce using rule 54
	'<='           reduce using rule 54
	'='            reduce using rule 54
	'>'            reduce using rule 54
	'>='           reduce using rule 54
	'?'            reduce using rule 54
	'catch'        reduce using rule 54
	'do'           reduce using rule 54
	'else'         reduce using rule 54
	'end'          reduce using rule 54
	'from'         reduce using rule 54
	'in'           reduce using rule 54
	'then'         reduce using rule 54
	'to'           reduce using rule 54
	'|'            reduce using rule 54
	%eof           reduce using rule 54


State 40

	Expr2 -> Expr2 . '=' Expr3                          (rule 58)
	Expr2 -> Expr2 . '<' Expr3                          (rule 59)
	Expr2 -> Expr2 . '>' Expr3                          (rule 60)
	Expr2 -> Expr2 . '<=' Expr3                         (rule 61)
	Expr2 -> Expr2 . '>=' Expr3                         (rule 62)
	Expr2 -> Expr2 . '!=' Expr3                         (rule 63)
	Expr1 -> Expr2 .                                    (rule 67)

	'!='           shift, and enter state 90
	'&'            reduce using rule 67
	')'            reduce using rule 67
	':'            reduce using rule 67
	';'            reduce using rule 67
	'<'            shift, and enter state 91
	'<='           shift, and enter state 92
	'='            shift, and enter state 93
	'>'            shift, and enter state 94
	'>='           shift, and enter state 95
	'?'            reduce using rule 67
	'catch'        reduce using rule 67
	'do'           reduce using rule 67
	'else'         reduce using rule 67
	'end'          reduce using rule 67
	'from'         reduce using rule 67
	'in'           reduce using rule 67
	'then'         reduce using rule 67
	'to'           reduce using rule 67
	'|'            reduce using rule 67
	%eof           reduce using rule 67


State 41

	Expr1 -> Expr1 . '&' Expr2                          (rule 65)
	Expr1 -> Expr1 . '|' Expr2                          (rule 66)
	Expr -> Expr1 . '?' Expr ':' Expr                   (rule 68)
	Expr -> Expr1 .                                     (rule 69)

	'&'            shift, and enter state 96
	')'            reduce using rule 69
	':'            reduce using rule 69
	';'            reduce using rule 69
	'?'            shift, and enter state 102
	'catch'        reduce using rule 69
	'do'           reduce using rule 69
	'else'         reduce using rule 69
	'end'          reduce using rule 69
	'from'         reduce using rule 69
	'in'           reduce using rule 69
	'then'         reduce using rule 69
	'to'           reduce using rule 69
	'|'            shift, and enter state 97
	%eof           reduce using rule 69


State 42

	%start_pExpr -> Expr .                              (rule 11)

	%eof           accept


State 43

	Expr5 -> '!' . Expr5                                (rule 56)

	'!'            shift, and enter state 43
	'('            shift, and enter state 44
	'-'            shift, and enter state 45
	'check'        shift, and enter state 46
	'false'        shift, and enter state 47
	'true'         shift, and enter state 48
	L_Ident        shift, and enter state 19
	L_integ        shift, and enter state 49

	Ident          goto state 34
	Integer        goto state 35
	Expr6          goto state 36
	Expr5          goto state 101

State 44

	Expr6 -> '(' . Expr ')'                             (rule 48)

	'!'            shift, and enter state 43
	'('            shift, and enter state 44
	'-'            shift, and enter state 45
	'check'        shift, and enter state 46
	'false'        shift, and enter state 47
	'true'         shift, and enter state 48
	L_Ident        shift, and enter state 19
	L_integ        shift, and enter state 49

	Ident          goto state 34
	Integer        goto state 35
	Expr6          goto state 36
	Expr3          goto state 37
	Expr4          goto state 38
	Expr5          goto state 39
	Expr2          goto state 40
	Expr1          goto state 41
	Expr           goto state 100

State 45

	Expr5 -> '-' . Expr5                                (rule 55)

	'!'            shift, and enter state 43
	'('            shift, and enter state 44
	'-'            shift, and enter state 45
	'check'        shift, and enter state 46
	'false'        shift, and enter state 47
	'true'         shift, and enter state 48
	L_Ident        shift, and enter state 19
	L_integ        shift, and enter state 49

	Ident          goto state 34
	Integer        goto state 35
	Expr6          goto state 36
	Expr5          goto state 99

State 46

	Expr6 -> 'check' . Expr 'in' Ident                  (rule 47)

	'!'            shift, and enter state 43
	'('            shift, and enter state 44
	'-'            shift, and enter state 45
	'check'        shift, and enter state 46
	'false'        shift, and enter state 47
	'true'         shift, and enter state 48
	L_Ident        shift, and enter state 19
	L_integ        shift, and enter state 49

	Ident          goto state 34
	Integer        goto state 35
	Expr6          goto state 36
	Expr3          goto state 37
	Expr4          goto state 38
	Expr5          goto state 39
	Expr2          goto state 40
	Expr1          goto state 41
	Expr           goto state 98

State 47

	Expr6 -> 'false' .                                  (rule 44)

	'!='           reduce using rule 44
	'&'            reduce using rule 44
	')'            reduce using rule 44
	'*'            reduce using rule 44
	'+'            reduce using rule 44
	'-'            reduce using rule 44
	'/'            reduce using rule 44
	':'            reduce using rule 44
	';'            reduce using rule 44
	'<'            reduce using rule 44
	'<='           reduce using rule 44
	'='            reduce using rule 44
	'>'            reduce using rule 44
	'>='           reduce using rule 44
	'?'            reduce using rule 44
	'catch'        reduce using rule 44
	'do'           reduce using rule 44
	'else'         reduce using rule 44
	'end'          reduce using rule 44
	'from'         reduce using rule 44
	'in'           reduce using rule 44
	'then'         reduce using rule 44
	'to'           reduce using rule 44
	'|'            reduce using rule 44
	%eof           reduce using rule 44


State 48

	Expr6 -> 'true' .                                   (rule 43)

	'!='           reduce using rule 43
	'&'            reduce using rule 43
	')'            reduce using rule 43
	'*'            reduce using rule 43
	'+'            reduce using rule 43
	'-'            reduce using rule 43
	'/'            reduce using rule 43
	':'            reduce using rule 43
	';'            reduce using rule 43
	'<'            reduce using rule 43
	'<='           reduce using rule 43
	'='            reduce using rule 43
	'>'            reduce using rule 43
	'>='           reduce using rule 43
	'?'            reduce using rule 43
	'catch'        reduce using rule 43
	'do'           reduce using rule 43
	'else'         reduce using rule 43
	'end'          reduce using rule 43
	'from'         reduce using rule 43
	'in'           reduce using rule 43
	'then'         reduce using rule 43
	'to'           reduce using rule 43
	'|'            reduce using rule 43
	%eof           reduce using rule 43


State 49

	Integer -> L_integ .                                (rule 19)

	'!='           reduce using rule 19
	'&'            reduce using rule 19
	')'            reduce using rule 19
	'*'            reduce using rule 19
	'+'            reduce using rule 19
	'-'            reduce using rule 19
	'/'            reduce using rule 19
	':'            reduce using rule 19
	';'            reduce using rule 19
	'<'            reduce using rule 19
	'<='           reduce using rule 19
	'='            reduce using rule 19
	'>'            reduce using rule 19
	'>='           reduce using rule 19
	'?'            reduce using rule 19
	'bool'         reduce using rule 19
	'catch'        reduce using rule 19
	'do'           reduce using rule 19
	'else'         reduce using rule 19
	'end'          reduce using rule 19
	'from'         reduce using rule 19
	'in'           reduce using rule 19
	'int'          reduce using rule 19
	'then'         reduce using rule 19
	'to'           reduce using rule 19
	'|'            reduce using rule 19
	%eof           reduce using rule 19


State 50

	%start_pExpr1 -> Expr1 .                            (rule 10)
	Expr1 -> Expr1 . '&' Expr2                          (rule 65)
	Expr1 -> Expr1 . '|' Expr2                          (rule 66)

	'&'            shift, and enter state 96
	'|'            shift, and enter state 97
	%eof           accept


State 51

	%start_pExpr2 -> Expr2 .                            (rule 9)
	Expr2 -> Expr2 . '=' Expr3                          (rule 58)
	Expr2 -> Expr2 . '<' Expr3                          (rule 59)
	Expr2 -> Expr2 . '>' Expr3                          (rule 60)
	Expr2 -> Expr2 . '<=' Expr3                         (rule 61)
	Expr2 -> Expr2 . '>=' Expr3                         (rule 62)
	Expr2 -> Expr2 . '!=' Expr3                         (rule 63)

	'!='           shift, and enter state 90
	'<'            shift, and enter state 91
	'<='           shift, and enter state 92
	'='            shift, and enter state 93
	'>'            shift, and enter state 94
	'>='           shift, and enter state 95
	%eof           accept


State 52

	%start_pExpr5 -> Expr5 .                            (rule 8)

	%eof           accept


State 53

	%start_pExpr4 -> Expr4 .                            (rule 7)
	Expr4 -> Expr4 . '*' Expr5                          (rule 52)
	Expr4 -> Expr4 . '/' Expr5                          (rule 53)

	'*'            shift, and enter state 88
	'/'            shift, and enter state 89
	%eof           accept


State 54

	%start_pExpr3 -> Expr3 .                            (rule 6)
	Expr3 -> Expr3 . '+' Expr4                          (rule 49)
	Expr3 -> Expr3 . '-' Expr4                          (rule 50)

	'+'            shift, and enter state 86
	'-'            shift, and enter state 87
	%eof           accept


State 55

	%start_pExpr6 -> Expr6 .                            (rule 5)

	%eof           accept


State 56

	%start_pStmt2 -> Stmt2 .                            (rule 4)

	%eof           accept


State 57

	Stmt2 -> 'for' . Ident 'from' Expr 'to' Expr 'do' Stmt 'end'    (rule 39)
	Stmt2 -> 'for' . Ident 'in' 'keys' Ident 'do' Stmt 'end'    (rule 40)
	Stmt2 -> 'for' . Ident 'in' 'values' Ident 'do' Stmt 'end'    (rule 41)
	Stmt2 -> 'for' . Ident ',' Ident 'in' Ident 'do' Stmt 'end'    (rule 42)

	L_Ident        shift, and enter state 19

	Ident          goto state 85

State 58

	Stmt2 -> 'if' . Expr 'then' Stmt 'else' Stmt 'end'    (rule 36)
	Stmt2 -> 'if' . Expr 'then' Stmt 'end'              (rule 37)

	'!'            shift, and enter state 43
	'('            shift, and enter state 44
	'-'            shift, and enter state 45
	'check'        shift, and enter state 46
	'false'        shift, and enter state 47
	'true'         shift, and enter state 48
	L_Ident        shift, and enter state 19
	L_integ        shift, and enter state 49

	Ident          goto state 34
	Integer        goto state 35
	Expr6          goto state 36
	Expr3          goto state 37
	Expr4          goto state 38
	Expr5          goto state 39
	Expr2          goto state 40
	Expr1          goto state 41
	Expr           goto state 84

State 59

	Stmt2 -> 'while' . Expr 'do' Stmt1                  (rule 38)

	'!'            shift, and enter state 43
	'('            shift, and enter state 44
	'-'            shift, and enter state 45
	'check'        shift, and enter state 46
	'false'        shift, and enter state 47
	'true'         shift, and enter state 48
	L_Ident        shift, and enter state 19
	L_integ        shift, and enter state 49
